--- a/1_Aufgabenstellung.tex
+++ b/1_Aufgabenstellung.tex
@@ -1,4 +1,4 @@
-\section{Aufgabenstellung} 
+﻿\section{Aufgabenstellung} 
 
 Der Verlauf eines Ligretto-Spiel soll simuliert werden können. Um echten Zufall ins Spiel zu bringen, soll das Spiel über mehrere Maschinen verteilt werden
 
