+ Weitere java-Klassen

--- a/7_Schnittstellen.tex
+++ b/7_Schnittstellen.tex
@@ -5,12 +5,19 @@
 \subsubsection{Client}
 
 
-\lstinputlisting[language=Java]{RemoteClient.java}
+\lstinputlisting[language=Java]{listings/RemoteClient.java}
 
 
 \subsubsection{Server}
 
-\lstinputlisting[language=Java]{RemoteServer.java}
+\lstinputlisting[language=Java]{listings/RemoteServer.java}
+
+
+\subsubsection{Datenstrukturen}
+
+\lstinputlisting[language=Java]{listings/Stapel.java}
+
+\lstinputlisting[language=Java]{listings/Karte.java}
 
 
 % Für die Direkte eingabe des Codes kann man das hier benutzen:
