--- a/5_Spielalgorithmus.tex
+++ b/5_Spielalgorithmus.tex
@@ -28,3 +28,9 @@ Punkte Abrechnungs Informationen
 			nachdem ein spieler sin ligretto stapel fertig hät macht er irgend äs Ligretto Stop signal. dä Server leitet das wiiter a alli spieler und returnt no alli charte wo erst nach däm ligretto stop signal acho sind.
 			jede spieler zellt jetzt sin ligretto stapel und meldet diä zahl an Server
 			dä Server sortiert alli karte, zellt si und verrechnet jetzt diä pünkt.
+			
+\begin{figure}[hbt]
+  \centering
+  \includegraphics[width=0.80\textwidth,angle=0]{graphics/KarteLegen.png}
+  \caption{Sequenzdiagramm zum Legen einer Karte [Papier und Stift FTW] \hfill{} }
+ \end{figure}
