--- a/2_Spielbeschreibung.tex
+++ b/2_Spielbeschreibung.tex
@@ -1,4 +1,4 @@
-﻿\section{Spielbeschreibung}
+\section{Spielbeschreibung}
 
 \begin{figure}[hbt]
   \centering
@@ -19,21 +19,21 @@ Um ein neues Spiel vorzubereiten mischt jeder Spieler seinen Kartenstapel. Jeder
 Der Spielablauf funktioniert nun wie folgt für jeden Spieler:
 \begin{enumerate}
 \item Der Spieler schaut die offen vor sich liegenden Karten an.
-\item Dann prüft der Spieler die Stapel an Karten in der mitte des Spielfelds. 
+\item Der Spieler prüft die Stapel an Karten in der Mitte des Spielfelds. 
 \item Der Spieler versucht nun eine Karte zu finden, die eins höher ist als die oberste Karte eines Stapels und die selbe Farbe besitzt. Ist dies der Fall, so darf er seine Karte nehmen und oben auf diesen Stapel legen.
 \item Wenn diese gelegte Karte eine der 4 offen vor sich liegenden Karten gewesen ist, dann darf der Spieler die oberste Karte vom Ligretto Stapel aufdecken und anstelle der soeben gelegten Karte vor sich hin legen.
 \item Wenn eine 1er Karte verfügbar ist, darf damit ein neuer Stapel in der Mite des Spielfelds eröffnet werden.
-\item Wenn mit den offenen Karten keine Aktionen durchgeführt werden können, dann darf der Spieler von seinen restlichen Handkarten 3 Karten verdeckt abzählen und diese umdrehen und vor sich auf den Ablagestapel legen. Existiert noch kein Ablagestapel so legt er die 3 Karten einfach neben seine bereits vor sich liegenden Karten und eröffnet somit seinen Ablagestapel. Beim Ablagestapel darf nun jeweils die oberste Karte ebenfalls gespielt werden.
+\item Wenn mit den offenen Karten keine Aktionen durchgeführt werden können darf der Spieler von seinen restlichen Handkarten 3 Karten verdeckt abzählen und diese umdrehen und vor sich auf den Ablagestapel legen. Existiert noch kein Ablagestapel so legt er die 3 Karten neben seine bereits vor sich liegenden Karten und eröffnet somit seinen Ablagestapel. Beim Ablagestapel darf nun jeweils die oberste Karte ebenfalls gespielt werden.
 \item Sollte weiterhin keine Karte gelegt werden können, so wiederholt der Spieler Punkt 6 und legt immer 3 Karten oben auf den Ablagestapel, bis er keine Handkarten mehr in der Hand hält. Ist dies der Fall, so nimmt der Spieler den Ablagestapel wieder als Handkarten auf und fängt von vorne an.
 \end{enumerate}
 
-Sobald ein Spieler die letzte Karte seines Ligretto Stapels aufgedeckt hat, ruft er Ligretto Stop und das Spiel wird beendet und es wird abgerechnet.
+Sobald ein Spieler die letzte Karte seines Ligretto Stapels aufgedeckt hat, ruft er Ligretto Stop, das Spiel wird beendet und es wird abgerechnet.
 
 Bei der Abrechnung bekommt jeder Spieler Punkte für sich selber. Die Abrechnung läuft wiefolgt ab:
 
 
 \begin{enumerate}
-\item Jeder Spieler zählt seine noch vorhandenen Ligretto Stapel Karten. Für jede Karte auf dem Ligretto Stapel bekommt er zwei Minuspunkte.
+\item Jeder Spieler zählt die noch vorhandenen Karten auf dem eigenen Ligretto Stapel. Für jede Karte auf dem Ligretto Stapel bekommt er zwei Minuspunkte.
 \item Die Karten auf dem Spielfeld werden nun wieder nach Farbe auf der Rückseite sortiert. Jeder Spieler erhält seine Karten zurück und zählt diese. Für jede gelegte Karte bekommt der Spieler einen Pluspunkt.
-\item Die Punkte werden nun notiert und dann fängt die nächste Runde an.
+\item Die Punkte werden nun notiert und  jeder Spieler bereitet sich für die nächste Runde vor.
 \end{enumerate}
