Datastruktur Eventhandler changed

--- a/3_Problemanalyse.tex
+++ b/3_Problemanalyse.tex
@@ -1,5 +1,6 @@
 \section{Problemanalyse}   %wo liegen die Probleme oder Schwierigkeiten in einer Ligrettosimulation mit verteilten Systemen?
 
+Um das Problem des Ligretto Systems zu verstehen definieren wir in erster Linie mal Assets, die es zu verwalten gilt. In einem zweiten Schrit 
 
 
 \subsection{Concurrency-Problem}
