--- a/6_Datenstrukturen.tex
+++ b/6_Datenstrukturen.tex
@@ -2,7 +2,7 @@
 
 \subsection{Klassendiagramm}
 
-\todo{Datenstrukturen:  Ausformulieren, Klassen Diagram Zeichnen usw.}
+%\todo{Datenstrukturen:  Ausformulieren, Klassen Diagram Zeichnen usw.}
 
 Karten
 
