--- a/5_Spielalgorithmus.tex
+++ b/5_Spielalgorithmus.tex
@@ -34,3 +34,11 @@ Punkte Abrechnungs Informationen
   \includegraphics[width=0.80\textwidth,angle=0]{graphics/KarteLegen.png}
   \caption{Sequenzdiagramm zum Legen einer Karte [Papier und Stift FTW] \hfill{} }
  \end{figure}
+ 
+ \subsection{Graphik}
+ \begin{figure}[hbt]
+  \centering
+  \includegraphics[width=0.60\textwidth,angle=0]{graphics/Spielablauf_Sequenzdiagramm.png}
+  \caption{Sequenzdiagramm für den Spielablauf [Visio FTW] \hfill{} }
+ \end{figure}
+
