fixed subsection error

--- a/7_Schnittstellen.tex
+++ b/7_Schnittstellen.tex
@@ -16,7 +16,7 @@
 
 \lstinputlisting[language=Java]{listings/EventListener.java}
 
-\subsubsubsection{GameEventListener}
+\textbf{GameEventListener}
 
 \lstinputlisting[language=Java]{listings/GameEventListener.java}
 
