Rework des Player / Server Zeugs. Datenstrukturen erster Entwurf. Spielalgorithmus angepasst auf das neue Peer to Peer system
Überall Bewertungsmassstab Informationen eingefügt als Kommentar.

Rote Markierungen wo noch etwas getan werden muss eingefügt.

--- a/3_Problemanalyse.tex
+++ b/3_Problemanalyse.tex
@@ -1,6 +1,18 @@
 \section{Problemanalyse}   %wo liegen die Probleme oder Schwierigkeiten in einer Ligrettosimulation mit verteilten Systemen?
 
-Um das Problem des Ligretto Systems zu verstehen definieren wir in erster Linie mal Assets, die es zu verwalten gilt. In einem zweiten Schrit 
+Um das Problem des Ligretto Systems zu verstehen definieren wir in erster Linie mal Assets, die es zu verwalten gilt. In einem zweiten Schritt
+
+\color{red}
+\textbf{Erweitern}
+\color{black}
 
 
 \subsection{Concurrency-Problem}
+
+
+\subsection{Skallierbarkeit}
+
+%Bewertungsmassstab:
+% Bei Ligretto berücksichtigen, dass die Anzahl Spieler steigen kann.
+%    - Ist die Zahl der beteiligten Rechner definiert? Wieviele Rechner sind minimal nötig, wieviele können max. eingesetzt werden?
+%    - Wie steigt die Leistung des Systems mit hinzugefügten Rechnern? (Bis zu 1 Zusatzpunkt für detaillierte Analyse)
