--- a/4_Loesungsansatz.tex
+++ b/4_Loesungsansatz.tex
@@ -1,3 +1,19 @@
 \section{Lösungsansatz} 
 
 Wir benutzen RMI.
+
+\color{red}
+\textbf{Mehr schreiben}
+\color{black}
+
+% Bewertungsmasstab:
+% - Ist der Algorithums zur Lösung der Teilafugaben nachvollziehbar? (3 Punkte)
+
+%    - Der Teil für die Initialisierung/Setup wird nicht hier bewertet
+%    - 2 Punkte für die komplexeren Komponenten (z.B. die "Clients")
+%    - 1 Punkt für die weniger komplexen Komponenten
+%    - Das umfasst auch die Kommunikation (wann kommuniziert wer mit wem)
+
+% Nutzung der Ressourcen / Performance
+%  -  Ist die Kommunikation minimiert?
+%  -  Ist der Bedarf an Memory / Storage sinnvoll?
