+ mehr text bei Datenstrukturen und Schnittstellen - Seitenzahl auf Titelseite + include des float-package

--- a/5_Spielalgorithmus.tex
+++ b/5_Spielalgorithmus.tex
@@ -55,7 +55,7 @@ Dazu gehören:
 
 \subsubsection{Karte legen}
 
-\begin{figure}[hbt]
+\begin{figure}[H]
   \centering
   \includegraphics[width=0.80\textwidth,angle=0]{graphics/KarteLegen.png}
   \caption{Sequenzdiagramm zum Legen einer Karte [Papier und Stift FTW] \hfill{} }
