+ Kommunikation, Concurrency-Problem, Skalierbarkeit

--- a/LigrettoKonzept.tex
+++ b/LigrettoKonzept.tex
@@ -24,6 +24,8 @@
 \documentclass[a4paper,oneside]{scrartcl}
 \pdfcompresslevel=9
 
+\usepackage{geometry}
+
 % define input encoding
 \usepackage[utf8x]{inputenc}
 
@@ -110,6 +112,7 @@
 \usepackage{longtable}
 
 \begin{document}
+
 % titelseite
 \begin{titlepage}
 % \begin{center}
