--- a/6_Datenstrukturen.tex
+++ b/6_Datenstrukturen.tex
@@ -16,7 +16,7 @@ Folgende Klassen und Interfaces bilden alle Daten und Funktionen ab, die zum Dur
 
 \subsection{Karte}
 
-Die Karte hat eine {\bf Farbe} (Rot, Gelb, Grün oder Blau) und {\bf Zahl} (zwischen 1 und 10). Sie ist ein serialisierbares Objekt, das zwischen dem Server und verschiedenen Spielern ausgetauscht werden kann.
+Die Karte hat eine {\bf Farbe} (Rot, Gelb, Grün oder Blau) und eine {\bf Zahl} (zwischen eins und zehn). Sie ist ein serialisierbares Objekt, das zwischen dem Server und verschiedenen Spielern ausgetauscht werden kann.
 
 \lstinputlisting{listings/Karte.java}
 
@@ -34,12 +34,11 @@ Die Klasse ServerImplementation besitzt zwei Listen; {\bf spieler}, worin alle a
 
 \subsection{Spieler}
 
-Ein Spieler kennt vier Methoden. Mit dem Aufruf von {\bf init()} sendet der Server dem Spieler alle Informationen, die er zum Spiel kennen muss. Wer ist der Server? Wer sind meine Nachbarn? Was sind meine Karten? Dabei werden die 40 Karten gemäss den Spielregeln auf Ligretto-, Spiel- und Handkartenstapel sowie auf die vier Slots aufgeteilt. Das Spiel wird mit {\bf spielStarten()} begonnen. Ab diesem Aufruf spielt der Spieler bis er oder ein Gegner das Spiel beendet. Die Methode {\bf legeKarte()} kann vom Spieler selbst oder von einem seiner Nachbarn aufgerufen werden. Dabei wird eine Karte übergeben und, wenn sie auf einen der Spielstapel passt, niedergelegt. Im Erfolgsfall wird true zurückgegeben, ansonsten false. Ein Aufruf von {\bf spielBeenden()} beendet das Spiel. Zuletzt wird {\bf getPunkte()} vom Server aufgerufen um den Sieger der aktuellen Spielrunde zu ermitteln.
+Ein Spieler kennt vier Methoden. Mit dem Aufruf von {\bf init()} erhält er alle Informationen, die er zum Spiel kennen muss. Wer ist der Server? Wer sind meine Nachbarn? Was sind meine Karten? Dabei werden die 40 Karten gemäss den Spielregeln auf Ligretto-, Spiel- und Handkartenstapel sowie auf die vier Slots aufgeteilt. Das Spiel wird mit {\bf spielStarten()} begonnen. Ab diesem Aufruf spielt der Spieler bis er oder ein Gegner das Spiel beendet. Die Methode {\bf legeKarte()} kann vom Spieler selbst oder von einem seiner Nachbarn aufgerufen werden. Dabei wird eine Karte übergeben und, wenn sie auf einen der Spielstapel passt, niedergelegt. Im Erfolgsfall wird dabei true zurückgegeben, ansonsten false. Ein Aufruf von {\bf spielBeenden()} beendet das Spiel. Zuletzt wird {\bf getPunkte()} vom Server aufgerufen um den Sieger der aktuellen Spielrunde zu ermitteln.
 
 \lstinputlisting{listings/Spieler.java}
 
-
-SpielerImplementation implementiert das eben beschriebene Spielerinterface. Dabei werden folgende Attribute definiert: {\bf server} - die Serverinstanz, die das Spiel kontrolliert. {\bf nachbarn} - eine Liste aller Nachbarn. {\bf ligrettoStapel} - ein Stapel mit anfänglich zehn Karten, die möglichst rasch verspielt werden müssen. {\bf spielStapel} - Die (maximal vier) Stapel, auf die alle Spieler Ihre Karten legen können. {\bf handKarten} - der Stapel mit den Karten, die der Spieler in der Hand hält. {\bf slots} - die vier offen liegenden Karten, die neben dem Ligrettostapel platziert werden.
+SpielerImplementation implementiert das eben beschriebene Spielerinterface. Dabei werden folgende Attribute definiert: {\bf server} - die Serverinstanz, die das Spiel kontrolliert. {\bf nachbarn} - eine Liste aller Nachbarn. {\bf ligrettoStapel} - ein Stapel mit anfänglich zehn Karten, die möglichst rasch verspielt werden müssen. {\bf spielStapel} - Die (maximal vier) Stapel, auf die alle Spieler ihre Karten legen können. {\bf handKarten} - der Stapel mit den Karten, die der Spieler in der Hand hält. {\bf slots} - die vier offen liegenden Karten, die neben dem Ligrettostapel platziert werden.
 
 \lstinputlisting{listings/SpielerImplementation.java}
 
