Erwartetes Ergebnis überarbeitet
Signed-off-by: Rolf Koch <gsemiaspam@gmail.com>

--- a/5_Spielalgorithmus.tex
+++ b/5_Spielalgorithmus.tex
@@ -55,16 +55,23 @@ Dazu gehören:
 
 \subsubsection{Karte legen}
 
+Abbildung~\ref{SequenzdiagramClient} zeigt das Verhalten des Clients gegenüber seinen Nachbarn.
+
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.80\textwidth,angle=0]{graphics/KarteLegen.png}
   \caption{Sequenzdiagramm zum Legen einer Karte [Papier und Stift FTW] \hfill{} }
+   \label{SequenzdiagramClient}
  \end{figure}
  
- \subsection{Graphik}
+\subsection{Graphik}
+
+Abbildung~\ref{SequenzdiagramServer} zeigt das Verhalten des Servers gegenüber den Clients. 
+
  \begin{figure}[hbt]
   \centering
   \includegraphics[width=0.60\textwidth,angle=0]{graphics/Spielablauf_Sequenzdiagramm.png}
-  \caption{Sequenzdiagramm für den Spielablauf [Visio FTW] \hfill{} }
+  \caption{Sequenzdiagramm für den Spielablauf aus Serversicht \hfill{} }
+  \label{SequenzdiagramServer}
  \end{figure}
 
