--- a/6_Datenstrukturen.tex
+++ b/6_Datenstrukturen.tex
@@ -1,6 +1,6 @@
 \section{Datenstrukturen und Schnittstellen} 
 
-Folgende Klassen und Interfaces bilden alle Daten und Funktionen ab, die zum Durchführen eines Ligrettospiels notwendig sind.
+Abbildung~\ref{Klassendiagramm} bildet die Klassen und Interfaces und alle Daten und Funktionen ab , die zum Durchführen eines Ligrettospiels notwendig sind.
 
 % Bewertungsmassstab:
 %  - Sind die Daten vollständig beschrieben, d.h. Anzahl und Wertebereich angegeben (3 Punkte)?
@@ -11,6 +11,7 @@ Folgende Klassen und Interfaces bilden alle Daten und Funktionen ab, die zum Dur
 \begin{figure}[H]
 	\includegraphics[width=1.0\textwidth,angle=0]{graphics/klassendiagramm.pdf}
 	\caption{Klassendiagramm \hfill{} }
+	\label{Klassendiagramm}
 \end{figure}
 
 
